# bacher_Driver_sceduler

./: .env.example  .replit  DELETE_ROUTE_FORMAT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  Dockerfile  FIXED_ROUTES_API_ENDPOINTS.md  FIXED_ROUTES_ENDPOINTS_SUMMARY.md  FIXED_ROUTES_IMPLEMENTATION.md  OPENAI_ASSISTANT_FIXED_ROUTES_INTEGRATION.md  OPENAI_ASSISTANT_SETUP.md  QUICK_TEST_EXAMPLE.md  README.md  TECHNICAL_WORKFLOW_DOCUMENTATION.md  _worker.js  debug_data_formats.py  demo_openai_assistant.py  deploy_test.py  main.py  openai_assistant_action.py  openapi.yaml  optimizer_standalone_example.py  or_tools_input_format.md  pyproject.toml  replit.md  start.py  test_fixed_assignments.py  test_supabase.py  wrangler.toml
api/: __init__.py  dependencies.py
attached_assets/: Pasted--API-Operations-Guide-for-Driver-Scheduling-System-Overview-Your-Supabase-database-supports--1754944182406_1754944182406.txt  Pasted--Driver-Route-Assignment-Optimization-using-OR-Tools-Optimizes-driver-assignments-for-a-full-we-1754945223643_1754945223644.txt  Pasted--Enhanced-OR-Tools-Driver-Route-Optimizer-with-Day-by-Day-Output-and-Consecutive-Hours-Constrain-1755872897562_1755872897563.txt  Pasted--First-delete-all-existing-data-from-the-routes-table-DELETE-FROM-routes-Reset-the-sequen-1755886233701_1755886233701.txt  Pasted--OR-Tools-Driver-Route-Assignment-Optimization-Complete-Implementation-Handles-exact-database-1755583638983_1755583638984.txt  Pasted--Project-Structure-driver-scheduling-backend-main-py-FastAPI-appl-1754940266717_1754940266752.txt  (+12 more)
config/: __init__.py  settings.py
(+40 files in other folders)
